--- a/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/people/edit.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>New person</title>
 </head>
 <body>
-
+<form th:method="PATCH" th:object="${person}" th:action="@{/people/{id}(id=${person.getPerson_id()})}">
+    <label for="fullName">Enter full name: </label>
+    <input type="text" id="fullName" th:field="*{fullName}" th:value="*{fullName}"/>
+    <div style="color: red" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}" > Name text </div>
+    <br/>
+    <label for="dateOfBirth">Enter birthdate: </label>
+    <input type="text" id="dateOfBirth" th:field="*{dateOfBirth}" th:value="*{dateOfBirth}"/>
+    <div style="color: red" th:if="${#fields.hasErrors('dateOfBirth')}" th:errors="*{dateOfBirth}"> Name text </div>
+    <br/>
+    <input type="submit" value="Update"/>
+</form>
 </body>
 </html>
