--- a/src/main/webapp/WEB-INF/views/books/new.html
+++ b/src/main/webapp/WEB-INF/views/books/new.html
@@ -18,7 +18,7 @@
     <input type="text" id="year" th:field="*{year}"/>
     <div style="color: red" th:if="${#fields.hasErrors('year')}" th:errors="*{year}"> year text </div>
     <br/>
-    <input type="hidden" th:field="*{person_id}" th:value="null"/>
+    <input type="hidden" th:field="*{person.person_id}" th:value="null"/>
     <input type="submit" value="Create"/>
 </form>
 </body>
