--- a/src/main/webapp/WEB-INF/views/books/show.html
+++ b/src/main/webapp/WEB-INF/views/books/show.html
@@ -7,29 +7,29 @@
 <body>
 <p th:text="'Name: ' + ${book.getName()}"> BOOK.NAME</p>
 <p th:text="'Author: ' + ${book.getAuthor()}"> BOOK.AUTHOR</p>
-<p th:text="'ID: ' + ${book.getBook_id()}"> BOOK.ID</p>
+<p th:text="'ID: ' + ${book.getId()}"> BOOK.ID</p>
 
 <hr/>
 <div th:if="${owner != null}">
-        <a th:href="@{/people/{id}(id=${owner.getPerson_id()})}" th:text="${owner.getFullName()}"></a>
-    <form th:method="PATCH" th:action="@{/books/{id}/freebook(id=${book.getBook_id()})}">
+        <a th:href="@{/people/{id}(id=${owner.getId()})}" th:text="${owner.getFullName()}"></a>
+    <form th:method="PATCH" th:action="@{/books/{id}/freebook(id=${book.getId()})}">
         <input type="submit" value="Free book"/>
     </form>
 </div>
 <div th:if="${owner == null}">
     <p>This book was not taken</p>
-    <form th:method="PATCH" th:action="@{/books/{id}/addowner(id=${book.getBook_id()})}">
+    <form th:method="PATCH" th:action="@{/books/{id}/addowner(id=${book.getId()})}">
         <label for="person">Assign book to:</label>
-        <select th:object="${person}" th:field="*{person_id}" id="person">
-            <option th:each="person : ${people}" th:value="${person.getPerson_id()}" th:text="${person.getFullName()}"></option>
+        <select th:object="${person}" th:field="*{id}" id="person">
+            <option th:each="person : ${people}" th:value="${person.getId()}" th:text="${person.getFullName()}"></option>
         </select>
         <input type="submit" value="Assign" />
     </form>
 </div>
 
 <hr/>
-<a th:href="@{/books/{id}/edit(id=${book.getBook_id()})}">Edit</a>
-<form th:method="DELETE" th:action="@{/books/{id}(id=${book.getBook_id()})}">
+<a th:href="@{/books/{id}/edit(id=${book.getId()})}">Edit</a>
+<form th:method="DELETE" th:action="@{/books/{id}(id=${book.getId()})}">
     <input type="submit" value="Delete"/>
 </form>
 </body>
