--- a/src/main/webapp/WEB-INF/views/books/index.html
+++ b/src/main/webapp/WEB-INF/views/books/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div th:each="book : ${books}">
-    <a th:href="@{/books/{id}(id=${book.getBook_id()})}" th:text="${book.getAuthor()} + ' | ' + ${book.getName()} + ' | ' + ${book.getYear()}"> book </a>
+    <a th:href="@{/books/{id}(id=${book.getId()})}" th:text="${book.getAuthor()} + ' | ' + ${book.getName()} + ' | ' + ${book.getYear()}"> book </a>
 </div>
 <br/>
 <hr/>
