--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -7,12 +7,12 @@
 <body>
     <p th:text="'Full name: ' + ${person.getFullName()}"> PERSON.FULLNAME</p>
     <p th:text="'Birth date: ' + ${person.getDateOfBirth()}"> PERSON.DATEOFBIRTH</p>
-    <p th:text="'ID: ' + ${person.getPerson_id()}"> PERSON.ID</p>
+    <p th:text="'ID: ' + ${person.getId()}"> PERSON.ID</p>
 
 <hr/>
     <div th:if="${#lists.size(books) != 0}">
         <div th:each="book : ${books}">
-            <a th:href="@{/books/{id}(id=${book.getBook_id()})}" th:text="${book.getName()} + ' | ' + ${book.getAuthor()} + ' | ' + ${book.getYear()}"></a>
+            <a th:href="@{/books/{id}(id=${book.getId()})}" th:text="${book.getName()} + ' | ' + ${book.getAuthor()} + ' | ' + ${book.getYear()}"></a>
         </div>
     </div>
     <div th:if="${#lists.size(books) == 0}">
@@ -20,8 +20,8 @@
     </div>
 
 <hr/>
-<a th:href="@{/people/{id}/edit(id=${person.getPerson_id()})}">Edit</a>
-<form th:method="DELETE" th:action="@{/people/{id}(id=${person.getPerson_id()})}">
+<a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
+<form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
     <input type="submit" value="Delete"/>
 </form>
 </body>
