--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -12,7 +12,10 @@
 <hr/>
     <div th:if="${#lists.size(books) != 0}">
         <div th:each="book : ${books}">
-            <a th:href="@{/books/{id}(id=${book.getId()})}" th:text="${book.getName()} + ' | ' + ${book.getAuthor()} + ' | ' + ${book.getYear()}"></a>
+                <a th:style="${book.getOverdue()} ? 'color: red' : ''"
+                   th:href="@{/books/{id}(id=${book.getId()})}"
+                   th:text="${book.getName()} + ' | ' + ${book.getAuthor()} + ' | ' + ${book.getYear()}">
+                </a>
         </div>
     </div>
     <div th:if="${#lists.size(books) == 0}">
